# comonadhaskell

./: CHANGELOG.md  README.md  comonadplay.cabal
app/: Main.hs
