cabal-version:      2.4
name:               comonadplay
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Playing around with Comonads

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Justin Heyes-Jones
maintainer:         justinhj@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable comonadplay
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base >=4.12 && < 5,
      comonad ^>= 5.0.8
    hs-source-dirs:   app
    default-language: Haskell2010
